<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_job_posting"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/jobTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Job Title"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/jobDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Job Description"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/expectedDurationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Expected Duration"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/placeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Place"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/urgencyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Urgency"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/salaryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Salary"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Post Job" />

</LinearLayout>
